# Unibo

./: README.md
BOIDS_Simulation/: CMakeLists.txt  boids.cpp  boids.hpp  boids.test.cpp  button.cpp  button.hpp  main.cpp  ui.hpp  vector_algebra.cpp  vector_algebra.hpp
Circuits_Lab/: README.md  freq_amp.py  freq_fase.py
Circuits_Lab/dati_in_txt/: frampVL.txt  frfampVS.txt  frfaseVR.txt  frfaseVS.txt
Circuits_Lab/fit/fit_fr_amp/: VS_intersect_VL_fit.py  fitVC.py  fitVL.py  fitVL_reale.py  fitVR_reale.py  fitVS_reale.py  frampVC.txt  frampVL.txt  frampVR.txt
Circuits_Lab/fit/fit_fr_fase/: fit_fase_VC.py  fit_fase_VL.py  fit_fase_VR.py  fit_fase_VS.py  freq_fase.py  frfaseVC.txt  frfaseVL.txt  frfaseVR_1.txt
Circuits_Lab/fit/fit_segnale/: 1200Hz.txt  1200Hz_Adj.txt  300Hz.txt  727Hz.txt  fitVC.py  fitVL.py  fitVR.py
Circuits_Lab/segnale_sinusoidale/: 1200Hz.txt  300Hz.txt  680Hz.txt  727Hz.txt  734Hz.txt  makeplot.py
Circuits_Lab/sfasamento_canali/: phase.py  phase.txt
Elastic_Potential/: elastic_equations.py  elastic_figure.py
Particle_Decay_Simulation/: Main.C  extra.cpp  macro.C  macro1  particle.cpp  particle.hpp  particle_type.cpp  particle_type.hpp  resonance_type.cpp  resonance_type.hpp
Planet_Orbit/: orbit_funcs.py  planet_orbit.py
Solving_ODEs/: double_pendulum.ipynb  double_pendulum.py  harmonic_hoscillator.py  two_bodies.py
random_animations/: beats.py
